// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`zephr saga => createForm HOC should render a login form of the shape 1`] = `
Array [
  Object {
    "autoComplete": "username",
    "className": "zephr-input-email-address",
    "defaultValue": "",
    "id": "email-address",
    "placeholder": "Enter your email address",
    "required": false,
    "type": "email",
  },
  Object {
    "autoComplete": "current-password",
    "className": "zephr-input-current-password",
    "defaultValue": "",
    "id": "current-password",
    "placeholder": "Enter your password",
    "required": true,
    "type": "password",
  },
  Object {
    "id": "submit-button",
    "key": "zephr-submit-button",
    "type": "submit",
    "value": "Login",
  },
]
`;

exports[`zephr saga => createForm HOC should render a registration form of the shape 1`] = `
Array [
  Object {
    "autoComplete": "username",
    "className": "zephr-input-email-address",
    "defaultValue": "",
    "id": "email-address",
    "placeholder": "Enter your email address",
    "required": false,
    "type": "email",
  },
  Object {
    "className": "zephr-input-full-name",
    "defaultValue": "",
    "id": "full-name",
    "placeholder": "Enter your full name",
    "required": true,
    "type": "text",
  },
  Object {
    "autoComplete": "new-password",
    "className": "zephr-input-new-password",
    "defaultValue": "",
    "id": "new-password",
    "placeholder": "Create a password for your account",
    "required": true,
    "type": "password",
  },
  Object {
    "autoComplete": "new-password",
    "className": "zephr-input-verify-password",
    "defaultValue": "",
    "id": "verify-password",
    "placeholder": "Confirm your password",
    "required": true,
    "type": "password",
  },
  Object {
    "id": "terms-checkbox",
  },
  Object {
    "id": "submit-button",
    "key": "zephr-submit-button",
    "type": "submit",
    "value": "Create an account",
  },
]
`;
